deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-a
spec:
  selector:
    matchLabels:
      app: container-a
  template:
    metadata:
      labels:
        app: container-a
    spec:
      containers:
      - name: container-a
        image: ogajun/stub-container:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-b
spec:
  selector:
    matchLabels:
      app: container-b
  template:
    metadata:
      labels:
        app: container-b
    spec:
      containers:
      - name: container-b
        image: ogajun/stub-container:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-c
spec:
  selector:
    matchLabels:
      app: container-c
  template:
    metadata:
      labels:
        app: container-c
    spec:
      containers:
      - name: container-c
        image: ogajun/stub-container:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx:latest
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: "RuntimeDefault"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
