service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-a
spec:
  selector:
    app: container-a
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: container-b
spec:
  selector:
    app: container-b
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: container-c
spec:
  selector:
    app: container-c
  ports:
  - port: 80
    targetPort: 3000
